Adds support for caching repeated calls